[package]
name = "sunflower"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "sunflower"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
anyhow = "1.0.100"
davey = "0.0.1-pre.6"
openmls = "=0.7.0"
parking_lot = "0.12.5"
scrypt = "0.11.0"
thiserror = "2.0.17"
uniffi = { version = "0.30", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.30", features = [ "build" ] }
